# impact-os-ai-frappe

./: Dockerfile  MANIFEST.in  README.md  docker-entrypoint.sh  pyproject.toml  railway.toml  requirements.txt  setup.py
impact_os_ai/: hooks.py  modules.txt
impact_os_ai/impact_os_ai/api/: auth.py  chat.py  export.py  generate.py  projects.py  templates.py
impact_os_ai/impact_os_ai/doctype/ios_chat_message/: ios_chat_message.json  ios_chat_message.py
impact_os_ai/impact_os_ai/doctype/ios_export_log/: ios_export_log.json  ios_export_log.py
impact_os_ai/impact_os_ai/doctype/ios_project/: ios_project.json  ios_project.py
impact_os_ai/impact_os_ai/doctype/ios_subscription/: ios_subscription.json  ios_subscription.py
impact_os_ai/impact_os_ai/doctype/ios_template/: ios_template.json  ios_template.py
impact_os_ai/impact_os_ai/doctype/ios_user_profile/: ios_user_profile.json  ios_user_profile.py
impact_os_ai/impact_os_ai/fixtures/: workspace.json
