[project]
name = "impact_os_ai"
authors = [
    { name = "EdZola Technologies", email = "hello@edzola.com" }
]
description = "ImpactOS AI — MIS Blueprint Platform powered by MAP Framework"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "openai>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "stripe>=7.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "impact_os_ai"
